# nba_data

./: docker-compose.yaml  pyproject.toml
src/api/api/: settings.py
src/api/app/: models.py
src/api/app/migrations/: 0001_initial.py  0002_auto_20210905_1510.py  0003_auto_20210905_2022.py  0004_alter_play_primary_team.py  0005_auto_20210905_2058.py
src/api/scripts/: all.py  games.py  play_types.py  players.py  plays.py  teams.py
src/data_getters/: headers.py  requests.py  settings.py  util.py
src/data_getters/urls/: data.py  stats.py
src/scripts/: players.py
src/scripts/pull_up_3/: index.html  test.py
src/viz/: table.css  table.py
tests/: test_nba.py
