[tool.poetry]
name = "nba"
version = "0.1.0"
description = ""
authors = ["Patrick Fenerty <patrick@fenerty.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-rest-framework = "^0.1.0"
mongo-cached-requests = "^0.1.6"
pymongo = "^3.12.0"
pandas = "^1.3.0"
psycopg2-binary = "^2.9.1"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
